--- a/style.css
+++ b/style.css
@@ -37,14 +37,22 @@ main {
 }
 
 .wrapper-playzone h2 {
-	width: 70%;
+	width: 100%;
 	text-align: center;
 	padding: 0;
 	margin: 0;
 }
 
+.wrapper-options {
+	background-color: green;
+	border: 2px solid black;
+	border-radius: 25px;
+	height: 80%;
+	width: 15%;
+}
+
 .wrapper-game {
-	width: 70%;
+	width: 60%;
 	height: 80%;
 	border-radius: 25px;
 	overflow: hidden;
@@ -64,7 +72,7 @@ canvas:focus {
 	border: 2px solid black;
 	border-radius: 25px;
 	height: 80%;
-	width: 25%;
+	width: 15%;
 }
 
 .wrapper-controls {
