--- a/style.css
+++ b/style.css
@@ -23,43 +23,51 @@ header {
 main {
 	display: flex;
 	flex-direction: column;
-	height: 92%;
-}
-
-.wrapper-playzone {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	height: 100%;
-	gap: 7px 40px;
-	padding: 0.5% 2%;
 	background-color: #e9d734;
+	height: 92%;
+	padding: 1% 2%;
+	gap: 2%;
 }
 
-.wrapper-playzone h2 {
+main h2 {
 	width: 100%;
 	text-align: center;
 	padding: 0;
 	margin: 0;
 }
 
+.wrapper-playzone {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	gap: 2%;
+}
+
 .wrapper-options {
 	background-color: green;
 	border: 2px solid black;
 	border-radius: 25px;
-	height: 80%;
-	width: 15%;
+	height: 100%;
+	width: 20%;
 }
 
 .wrapper-game {
-	width: 60%;
-	height: 80%;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	width: 80%;
+	gap: 2%;
+}
+
+.wrapper-canvas {
+	width: 100%;
+	height: 100%;
 	border-radius: 25px;
 	overflow: hidden;
 }
 
 canvas {
-	background: black;
 	height: 100%;
 	width: 100%;
 }
@@ -68,18 +76,32 @@ canvas:focus {
 	outline: none;
 }
 
-.wrapper-chat {
-	border: 2px solid black;
-	border-radius: 25px;
-	height: 80%;
-	width: 15%;
-}
-
 .wrapper-controls {
 	border: 2px solid black;
 	border-radius: 25px;
-	height: 14%;
-	width: 70%;
+	height: 15%;
+	width: 100%;
+}
+
+.wrapper-chat {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	width: 20%;
+	gap: 2%;
+}
+
+.chat-display {
+	border: 2px solid black;
+	border-radius: 25px;
+	height: 100%;
+}
+
+.chat-input {
+	border: 2px solid black;
+	border-radius: 25px;
+	height: 15%;
+	width: 100%;
 }
 
 footer {
