--- a/login.css
+++ b/login.css
@@ -12,12 +12,12 @@ body {
 	flex-direction: column;
 	width: 100%;
 	height: 100%;
-	color: #f2f2f2;
-	background-color: black;
-	font: 0.9em "Poppins", sans-serif;
 }
 
 main {
+	color: #f2f2f2;
+	background-color: black;
+	font: 0.9em "Poppins", sans-serif;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -50,6 +50,7 @@ main {
 
 .wrapper-title h1 {
 	margin: 0;
+	padding-bottom: 5%;
 }
 
 .wrapper-connection {
@@ -101,4 +102,38 @@ form p {
 
 .sp-login {
 	height: 40%;
+	padding: 1% 5%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 2%;
 }
+
+.login-42 {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid #e5e5e5;
+	/* border-radius: .375rem; */
+}
+
+.svg {
+	height: 30px;
+	width: 50px;
+	fill: black;
+}
+
+.login-42:hover {
+	background-color: rgba(0, 0, 0, 0.5);
+	color: white;
+}
+
+.login-42:hover .svg {
+	fill: white !important;
+}
+
+/* .login-guest { */
+
+/* } */
