--- a/login.css
+++ b/login.css
@@ -51,13 +51,15 @@ main {
 .wrapper-title h1 {
 	margin: 0;
 	padding-bottom: 5%;
+	cursor: default;
+	user-select: none;
 }
 
 .wrapper-connection {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: 100%;
+	height: 85%;
 	width: 100%;
 	gap: 1%;
 }
@@ -77,6 +79,7 @@ input {
 	margin-bottom: 15px;
 	color: white;
 	position: relative;
+	user-select: none;
 }
 
 form button {
@@ -84,12 +87,24 @@ form button {
 	border-radius: 20px;
 	padding: 5px;
 	height: 40px;
+	margin-top: 8px;
+}
+
+form button:hover {
+	background: rgb(200, 200, 200);
+}
+
+form button:active {
+	margin-top: 10px;
+	margin-bottom: -2px;
 }
 
 form p {
 	align-self: center;
 	font-size: 85%;
 	margin: 1% 0%;
+	cursor: pointer;
+	user-select: none;
 }
 
 .wrapper-sp-login {
@@ -108,6 +123,13 @@ form p {
 	align-items: center;
 	justify-content: center;
 	gap: 2%;
+	border-radius: .375rem;
+	margin: 2px 0px;
+	user-select: none;
+}
+
+.sp-login:active {
+	margin: 4px 0px 0px 0px;
 }
 
 .sp-login:focus {
@@ -120,7 +142,6 @@ form p {
 	justify-content: center;
 	align-items: center;
 	border: 1px solid #e5e5e5;
-	/* border-radius: .375rem; */
 }
 
 .svg {
@@ -135,5 +156,16 @@ form p {
 }
 
 .login-42:hover .svg {
-	fill: white !important;
+	fill: white;
+}
+
+.login-google {
+	padding: 0;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+}
+
+.login-google:hover, .login-guest:hover {
+	background: rgb(225, 225, 225);
 }
