--- a/login.css
+++ b/login.css
@@ -1,3 +1,6 @@
+/*/////////*/
+/* General */
+/*/////////*/
 * {
 	box-sizing: border-box;
 }
@@ -8,44 +11,50 @@ html {
 }
 
 body {
-	display: flex;
-	flex-direction: column;
 	width: 100%;
 	height: 100%;
+	font: 0.9em "Poppins", sans-serif;
 }
+
+/*//////////////*/
+/* Login - main */
+/*//////////////*/
 
 main {
 	color: #f2f2f2;
 	background-color: black;
-	font: 0.9em "Poppins", sans-serif;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100%;
-	flex-direction: column;
+	padding: 15px;
+}
+
+/*//////////////*/
+/* Login - card */
+/*//////////////*/
+
+.card {
+	background-color: #2E2E2E;
+	border-radius: 10px;
+	box-shadow: 0 3px 10px 3px rgb(131, 126, 126);
 }
 
 .wrapper-login {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	background-color: #2E2E2E;
-	border-radius: 10px;
 	width: 100%;
 	height: 100%;
-	padding: 2.5%;
+	padding: 20px;
 	max-width: 395px;
 	max-height: 650px;
-	box-shadow: 0 3px 10px 3px rgb(131, 126, 126);
 }
 
 .wrapper-title {
 	display: flex;
-	height: 25%;
-	text-align: center;
-	align-items: center;
 	justify-content: center;
+	align-items: center;
+	height: 25%;
 }
 
 .wrapper-title h1 {
@@ -60,42 +69,41 @@ main {
 	flex-direction: column;
 	justify-content: space-between;
 	height: 85%;
-	width: 100%;
-	gap: 1%;
 }
+
+/*/////////////////*/
+/* Login - sign in */
+/*/////////////////*/
 
 form {
 	display: flex;
 	flex-direction: column;
-	gap: 3px;
+	gap: 5px;
 }
 
 input {
-	background: #2E2E2E;
 	height: 40px;
 	padding: 5px;
+	color: white;
+	background: #2E2E2E;
 	border: none;
 	border-bottom: 1px solid white;
 	margin-bottom: 15px;
-	color: white;
-	position: relative;
-	user-select: none;
 }
 
 form button {
-	border: 2px solid black;
-	border-radius: 20px;
-	padding: 5px;
 	height: 40px;
-	margin-top: 8px;
+	margin-top: 6px;
+	border-radius: 20px;
+	user-select: none;
 }
 
-form button:hover {
-	background: rgb(200, 200, 200);
+button:hover {
+	background: rgb(220, 220, 220);
 }
 
 form button:active {
-	margin-top: 10px;
+	margin-top: 8px;
 	margin-bottom: -2px;
 }
 
@@ -107,40 +115,40 @@ form p {
 	user-select: none;
 }
 
+/*/////////////////////////*/
+/* Login - special sign in */
+/*/////////////////////////*/
+
 .wrapper-sp-login {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	height: 40%;
 	gap: 5%;
-}
-
-.sp-login {
-	height: 40%;
-	padding: 1% 5%;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	gap: 2%;
-	border-radius: .375rem;
-	margin: 2px 0px;
 	user-select: none;
 }
 
-.sp-login:active {
-	margin: 4px 0px 0px 0px;
+.sp-login {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 2%;
+	height: 33%;
+	padding: 1% 5%;
+	margin: 2px 0px;
+	border-radius: 0.375rem;
 }
 
 .sp-login:focus {
 	outline: 5px auto -webkit-focus-ring-color;
 }
 
+.sp-login:active {
+	margin: 4px 0px 0px 0px;
+}
+
 .login-42 {
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
 	border: 1px solid #e5e5e5;
 }
 
@@ -160,12 +168,70 @@ form p {
 }
 
 .login-google {
-	padding: 0;
-	justify-content: center;
-	align-items: center;
 	overflow: hidden;
 }
 
-.login-google:hover, .login-guest:hover {
-	background: rgb(225, 225, 225);
+/*/////////////////////*/
+/* Media query - Phone */
+/*/////////////////////*/
+
+@media only screen and (max-width: 700px) and (orientation: portrait) {
+	main {
+		padding: 0;
+	}
+
+	.wrapper-login {
+		width: 100%;
+		height: 100%;
+		max-width: none;
+		max-height: none;
+	}
+
+	.wrapper-sp-login {
+		height: auto;
+	}
+
+	.sp-login {
+		margin-bottom: 10px;
+		height: 45px;
+	}
+}
+
+@media only screen and (max-height: 500px) and (orientation: landscape) {
+	body {
+		height: auto;
+	}
+
+	main {
+		padding: 0;
+	}
+
+	.wrapper-login {
+		width: 100%;
+		height: 100%;
+		max-width: none;
+		max-height: none;
+	}
+
+	.wrapper-title {
+		margin-bottom: 30px;
+	}
+
+	.wrapper-connection {
+		height: auto;
+		gap: 50px;
+	}
+
+	.wrapper-sp-login {
+		height: auto;
+	}
+
+	.sp-login {
+		margin-bottom: 10px;
+		height: 45px;
+	}
+
+	.sp-login:active {
+		margin: 4px 0px 8px 0px;
+	}
 }
