--- a/game.css
+++ b/game.css
@@ -57,8 +57,10 @@ h2 {
 .wrapper-playzone {
 	display: flex;
 	justify-content: space-between;
-	height: 100%;
 	gap: 2%;
+	height: 100%;
+	width: 100%;
+	max-width: 3000px;
 }
 
 /*////////////////*/
@@ -68,7 +70,7 @@ h2 {
 .wrapper-options {
 	width: 20%;
 	height: 100%;
-	padding: 2% 1%;
+	padding: 1%;
 }
 
 .wrapper-options form {
@@ -76,14 +78,20 @@ h2 {
 	flex-direction: column;
 	justify-content: space-between;
 	text-align: center;
+	gap: 25px;
 	width: 100%;
 	height: 100%;
+	overflow: auto;
+}
+
+.wrapper-options div.section-selector {
+	height: 240px;
+	min-height: 240px;
 }
 
 .wrapper-options div {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 	align-items: center;
 	gap: 25px;
 	width: 100%;
@@ -167,95 +175,94 @@ span {
 
 .mode-selector {
 	display: flex;
-	justify-content: center;
+	justify-content: flex-end;
 	align-items: center;
 	width: 100%;
+	position: relative;
+	cursor: pointer;
+	z-index: 1;
 }
 
 .mode-selector span {
-	width: 100%;
-}
-
-*::before, *::after {
-	margin: auto;
-	padding: 0;
-	outline: 0;
-	overflow: hidden;
-	box-sizing: border-box;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	width: 80%;
+	text-wrap: balance;
+	text-wrap: pretty;
 }
 
 .mode-selector .circle {
-	background-color: white;
-	display: inline-block;
-	position: relative;
-	width: 15px;
-	height: 15px;
-	border-radius: 50%;
-	transition: all .2s ease-in-out;
-	animation-timing-function: ease-in-out;
-	animation-iteration-count: infinite;
-	animation-duration: 1.6s;
-	overflow: hidden;
-}
-
-.mode-selector .circle::before {
-	content: "";
+	height: 25px;
+	width: 25px;
 	position: absolute;
-	width: 10px;
-	height: 10px;
-	background: white;
+	left: 7px;
+	background: #fc2c71;
+	box-shadow:
+		rgba(0, 0, 0, 0.3) 0px 0 1px 2px,
+		rgba(0, 0, 0, 0.8) 0 1px 1px inset,
+		#A14647 0 4px 5px inset,
+		rgba(0, 0, 0, 0.3) 0 5px 3px inset,
+		rgba(255, 255, 255, 0.3) 0 -1px 2px inset,
+		#A14647 0 -3px 10px inset;
+	border: #fc2c71 solid 1px;
 	border-radius: 50%;
-	box-shadow: rgba(0, 0, 0, 0.117647) 0 0 .8vw 0, rgba(0, 0, 0, 0.239216) 0 .8vw .8vw 0;
-	transition: all .2s;
+	cursor: pointer;
+	outline: none;
 }
 
-.mode-selector .circle::after {
-	content: "";
+.mode-selector .circle:after {
 	position: absolute;
-	width: 10vw;
-	height: 10vw;
-	background: rgba(255, 255, 255, .5);
+	bottom: -7px;
+	left: -7px;
+	content: "";
+	height: 35px;
+	width: 35px;
+	background: #fc2c71;
+	border: #fc2c71 1px solid;
 	border-radius: 50%;
-	transform: scale(0);
+	box-shadow:
+	#CA235A 0 4px 5px inset,
+	rgba(255, 255, 255, 0.5) 0 12px 5px inset,
+	#B01F4F 0 -12px 5px inset,
+	rgba(0, 0, 0, 0.8) 0 4px 8px;
+	z-index: -2;
 }
 
-.mode-selector [type=radio]:checked + .mode-selector .circle::after {
-	background: transparent;
-	transition: all 0.5s;
-	transform: scale(1);
+.mode-selector [type=radio]:checked + .circle {
+	border-color: #19040B;
+	box-shadow:
+		rgba(0,0,0,.8) 0 0 1px 1px,
+		rgba(0,0,0,.8) 0 3px 3px inset,
+		#D1253B 0 8px 10px inset,
+		rgba(0,0,0,.3) 0 20px 5px inset,
+		rgba(255,255,255,.3) 0 -2px 3px inset,
+		#D1253B 0 -7px 20px inset;
 }
 
-.mode-selector [type=radio] + .circle {
-	animation-delay: 0.6s;
-}
-.mode-selector [type=radio] + .circle:before {
-	background: blue;
-	animation: radio-uncheck 0.5s both;
-}
-.mode-selector [type=radio]:checked + .circle:before {
-	animation-name: radio-check;
-	animation-duration: 0.6s;
-	animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
-	animation-fill-mode: both;
+.wrapper-options .wrapper-submit-button {
+	display: flex;
+	justify-content: flex-end;
+	min-height: 100px;
 }
 
-@keyframes radio-check {
-	0% { transform: rotate(0) translateY(-4.8px) scale(0.2); }
-	83% { transform: rotate(360deg) translateY(-2.5px) scale(1); transform-origin: 2px; }
-	88% { transform: translateY(0.6px) scale(1); }
-	93% { transform: translateY(-1px) scale(1); }
-	100% { transform: translateY(0) scale(1); }
+form button {
+	align-self: center;
+	width: 100%;
+	padding: 0;
+	background: none;
+	border: none;
+	cursor: pointer;
 }
-@keyframes radio-uncheck {
-	25% { top: -6.5px; }
-	50% { top: 9px; }
-	75% { top: -10px; }
-	100% { top: -10px; transform: scale(0); }
+
+form button span {
+	font-family: 'Press Start 2P';
+	color: white;
+	text-shadow: 0 0 5px #ec41bf, 0 0 10px #8606b6, 0 0 15px #fff, 0 0 20px #921982, 0 0 25px #770067;
+	animation: fade 3s infinite;
+}
+
+@keyframes fade {
+	0% { opacity: 1; }
+	50% { opacity: 0; }
+	100% { opacity: 1; }
 }
 
 /*//////////////////////////*/
