--- a/game.css
+++ b/game.css
@@ -276,16 +276,17 @@ h2 {
 	100% { opacity: 1; }
 }
 
-.slot{
+.slot {
 	height: 70px;
 	width: 15px;
 	background: #555;
 	border: 2px solid #CCC;
 	border-radius: 4px;
 	position: relative;
+	overflow: hidden;
 }
 
-.slot:after{
+.slot:after {
 	content: '';
 	position: absolute;
 	bottom: 0;
@@ -304,11 +305,11 @@ h2 {
 	border-radius: 100%;
 	background: #e79178;
 	transition: margin 3s ease;
-	opacity: 0;
+	opacity: 1;
 	z-index: 1;
 }
 
-.coin:after{
+.coin:after {
 	content: '';
 	position: absolute;
 	left: 6px;
@@ -318,10 +319,50 @@ h2 {
 	background: #cb6d51;
 }
 
-.coin.active{
+.coin.active {
 	opacity: 1;
 	margin-top: 5px;
-	margin-left: 120%;
+	margin-left: 110%;
+}
+
+.coin.fall {
+	/* transition: none; */
+	opacity: 1;
+	animation: fall 1s 0s infinite;
+}
+
+@keyframes fall {
+	0% {
+		margin-top: 5px;
+		margin-left: 110%;
+	}
+	25% {
+		/* margin-top: 5px; */
+		margin-left: 80%;
+	}
+	35% {
+		/* margin-top: 5px; */
+		margin-left: 60%;
+	}
+	100% {
+		margin-left: 60%;
+		margin-top: 200px;
+	}
+	/* 50% {
+		margin-left: 70%;
+		margin-top: 50px;
+	} */
+	/* 75% {
+		margin-left: 60%;
+		margin-top: 75px;
+	} */
+	/* 100% {
+		margin-left: 50%;
+		margin-top: 150px;
+	}  */
+
+	/* margin-top: 300px; */
+	/* margin-left: 0%; */
 }
 
 /*//////////////////////////*/
