--- a/login.css
+++ b/login.css
@@ -46,8 +46,8 @@ main {
 	width: 100%;
 	height: 100%;
 	padding: 20px;
-	max-width: 395px;
-	max-height: 650px;
+	max-width: 340px;
+	max-height: 565px;
 }
 
 .wrapper-title {
@@ -68,7 +68,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: 85%;
+	height: 75%;
 }
 
 /*/////////////////*/
@@ -122,9 +122,9 @@ form p {
 .wrapper-sp-login {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	height: 40%;
-	gap: 5%;
+	justify-content: flex-end;
+	height: 30%;
+	gap: 10px;
 	user-select: none;
 }
 
@@ -133,7 +133,7 @@ form p {
 	justify-content: center;
 	align-items: center;
 	gap: 2%;
-	height: 33%;
+	height: 50%;
 	padding: 1% 5%;
 	margin: 2px 0px;
 	border-radius: 0.375rem;
@@ -165,10 +165,6 @@ form p {
 
 .login-42:hover .svg {
 	fill: white;
-}
-
-.login-google {
-	overflow: hidden;
 }
 
 /*/////////////////////*/
