--- a/css/game.css
+++ b/css/game.css
@@ -61,7 +61,8 @@ main {
 
 h2 {
 	text-align: center;
-	margin: 0;
+	margin: 5px 0;
+	height: 4%;
 	color: white;
 	user-select: none;
 	font-size: 2em;
@@ -71,7 +72,7 @@ h2 {
 	display: flex;
 	justify-content: space-between;
 	gap: 2%;
-	height: 100%;
+	height: 96%;
 	width: 100%;
 	max-width: 3000px;
 }
@@ -448,7 +449,7 @@ h2 {
 }
 
 .wrapper-canvas {
-	height: 100%;
+	height: 81%;
 	overflow: hidden;
 }
 
@@ -492,7 +493,7 @@ canvas:focus {
 }
 
 .chat-display {
-	height: 100%;
+	height: 81%;
 }
 
 .chat-input {
