--- a/index.css
+++ b/index.css
@@ -286,62 +286,51 @@ header h1 {
 	user-select: none;
 }
 
-.wrapper-user {
+nav {
+	width: 50%;
+	height: 100%;
+	padding: 0 1%;
+}
+
+nav ul {
+	display: flex;
+	justify-content: flex-end;
+	align-items: stretch;
+	gap: 5%;
+	padding: 0;
+	margin: 0;
+	max-height: 100%;
+	list-style-type: none;
+}
+
+nav ul li div {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 18%;
+	gap: 15px;
 	height: 100%;
 }
 
-.user {
+nav ul li button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	text-align: center;
-	gap: 25px;
-	background-color: inherit;
+	gap: 8px;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	background-color: var(--mainColor);
 	color: var(--textColor);
 	border: none;
-	padding: 0;
-	position: relative;
 	cursor: pointer;
 }
 
-.user span {
-	font-weight: 600;
-	text-align: left;
-	margin-right: 10px;
-}
-
-.menu {
-	position: absolute;
-	top: 100%;
-	left: 0;
-	width: 100%;
-	height: 0%;
-	display: none;
-}
-
-.menu ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-.menu ul li {
+nav span {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
-	height: 35px;
-	margin: 0;
-	padding: 10px;
-	background: var(--mainColor);
-	list-style-type: none;
-}
-
-.user:hover .menu {
-	display: block;
+	font-weight: 500;
+	font-size: 1em;
 }
 
 /*/////////////*/
@@ -359,7 +348,7 @@ main {
 
 h2 {
 	text-align: center;
-	margin: 5px 0;
+	margin: 0 0 10px 0;
 	height: 4%;
 	color: var(--textColor);
 	user-select: none;
